帖子添加地点和帖子详情视图
1.完善帖子详情视图
2.帖子可以添加地点，然后在详情页进行路线规划的跳转，这里的跳转直接用的插件，没有自己写

--- a/app.json
+++ b/app.json
@@ -10,7 +10,10 @@
     "pages/userRegister/userRegister",
     "pages/forgetPW/forgetPW",
     "pages/addNotes/addTransitionPage",
-    "pages/loginRemind/loginRemind"
+    "pages/loginRemind/loginRemind",
+    "pages/viewDetail/viewDetail",
+    "pages/addAddress/addAddress",
+    "pages/routePlan/routePlan"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -52,9 +55,15 @@
     ],
     "selectedColor": "#FE9A5E"
   },
+  "plugins": {
+      "routePlan": {
+      "version": "1.0.19",
+      "provider": "wx50b5593e81dd937a"
+      }
+  },
   "permission": {
     "scope.userLocation": {
-      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+      "desc": "你的位置信息将用于小程序定位"
     }
   },
   "style": "v2",
