小程序继续完善
1.编辑个人资料，写了个页面，功能还没开动。

--- a/app.json
+++ b/app.json
@@ -12,7 +12,8 @@
     "pages/addNotes/addTransitionPage",
     "pages/loginRemind/loginRemind",
     "pages/viewDetail/viewDetail",
-    "pages/addAddress/addAddress"
+    "pages/addAddress/addAddress",
+    "pages/editInfo/editInfo"
   ],
   "window": {
     "backgroundTextStyle": "light",
