前端修改完善
1.页面完善
2.用户修改各种信息功能完善
3.用户部分删除功能完善

--- a/app.json
+++ b/app.json
@@ -13,7 +13,8 @@
     "pages/loginRemind/loginRemind",
     "pages/viewDetail/viewDetail",
     "pages/addAddress/addAddress",
-    "pages/editInfo/editInfo"
+    "pages/editInfo/editInfo",
+    "pages/editPost/editPost"
   ],
   "window": {
     "backgroundTextStyle": "light",
