小程序搜索功能完善
1.搜索功能完成
2.个人中心的主页完善

--- a/app.json
+++ b/app.json
@@ -14,7 +14,9 @@
     "pages/viewDetail/viewDetail",
     "pages/addAddress/addAddress",
     "pages/editInfo/editInfo",
-    "pages/editPost/editPost"
+    "pages/editPost/editPost",
+    "pages/search/search",
+    "pages/search/searchList"
   ],
   "window": {
     "backgroundTextStyle": "light",
